[build-system]
requires = [
    "setuptools==67.7.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "cryptenv"
version = "0.1"
authors = [
    {name = "Vasilis Papadopoulos", email = "vpapadopoulos155@gmail.com"},
]
description = "A CLI tool to encrypt and decrypt variables in .env files."
requires-python = ">=3.9"
keywords = ["env", "encrypt", "decrypt"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "cryptography==40.0.2",
]
dynamic = ["readme"]

[project.urls]
GitHub = "https://github.com/vaspapadopoulos/cryptenv"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
cryptenv = "cryptenv.cryptenv:main"

[tool.setuptools.packages.find]
where = ["cryptenv"]
namespaces = false
